--- a/Codigo/index.css
+++ b/Codigo/index.css
@@ -48,41 +48,27 @@ header {
 .dropdown-idioma {
     position: relative;
     display: inline-block;
-}
-
-.dropdown-idioma img {
-    width: 50px; /* Ajusta para que sea del mismo tamaño que account.png */
-    height: 50px;
-    cursor: pointer;
-    margin-right: 20px;
-}
-
-.dropdown-content-idioma {
+  }
+  
+  .dropdown-content-idioma {
     display: none;
     position: absolute;
-    background-color: #fff;
-    color: #df7304;
-    min-width: 100px;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
-    text-align: center;
-    left: -28px;
-}
-
-.dropdown-content-idioma a {
-    color: #df7304;
-    padding: 10px;
+  }
+  
+  .dropdown-content-idioma a {
+    color: black;
+    padding: 12px 16px;
     text-decoration: none;
     display: block;
-}
-
-.dropdown-content-idioma a:hover {
-    background-color: #df7304;
-    color: white;
-}
-
-.dropdown-idioma:hover .dropdown-content-idioma {
+  }
+  
+  .dropdown-idioma:hover .dropdown-content-idioma {
     display: block;
-}
+  }
 .search-bar {
     flex: 2; /* Permite que la barra de búsqueda se expanda en el centro */
     display: flex;
